--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "miroctus",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
+  "main": "app.js",
   "scripts": {
     "start": "node ./bin/www"
+  },
+  "engines": {
+    "node": "8.11.1"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
