--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "mongodb": "^3.1.3",
     "morgan": "~1.9.0"
   }
 }
