--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": "8.11.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chart.js": "^2.7.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
