--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "http-errors": "~1.6.2",
     "memorystore": "^1.6.0",
     "mongodb": "^3.1.3",
