--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "memorystore": "^1.6.0",
     "mongodb": "^3.1.3",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
